middle-sec-added

--- a/index.html
+++ b/index.html
@@ -14,23 +14,39 @@
 
 <body>
     <section class="header-sec">
-        <div id="header-style" class="header-content">
+        <div id="header-sec-wrapper">
+            <div id="header-style" class="header-content">
 
-            <h1><span>Skip</span> The Diet,</h1>
-            <h1>Just Eat Healthy</h1>
-            <h1>With Hungry Man?</h1>
-
-            <p>
-                Imagine you don't need a diet because we provide healthy and delicious food for you. We have thousands
-                of restaurants, including local favorites that don't normally deliver. Discover new cuisines all around
-                you!
-            </p>
-            <button>
-                <a href="#">Order Food</a>
-            </button>
+                <h1><span>Skip</span> The Diet,</h1>
+                <h1>Just Eat Healthy</h1>
+                <h1>With Hungry Man?</h1>
+    
+                <p>
+                    Imagine you don't need a diet because we provide healthy and delicious food for you. We have thousands
+                    of restaurants, including local favorites that don't normally deliver. Discover new cuisines all around
+                    you!
+                </p>
+                <button>
+                    <a href="#">Order Food</a>
+                </button>
+            </div>
+            <div class="header-content">
+                <img src="images/female/Group 8425.png" alt="">
+            </div>
         </div>
-        <div class="header-content">
-            <img src="images/female/Group 8425.png" alt="">
+    </section>
+    <section class="middle-sec">
+        <div class="middle-content">
+            <img src="images/male/my-bg.png" alt="">
+        </div>
+        <div class="middle-content">
+            <h2>About Me</h2>
+            <p>
+                Hi! I'm Dev. Monir. I am an Entry-level web developer. Still, I am learning programming at programming Hero. I also have a Restaurant. The restaurant's name is Hungry Man?. Hungry Man? is one of the best food providers in Asia. The restaurant has branches in ten countries in Asia. The food menu here: pizza, burgers, desserts, fried chicken, cappuccino, rice dishes, snacks, drinks, smoked red chicken, etc. We also deliver food to your address in the shortest time possible. So stay connected to contact us at the address below.
+            </p>
+            <button id="btn-style">
+                <a href="#">Contact me</a>
+            </button>
         </div>
     </section>
 </body>
