--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
                 <h1><span>Skip</span> The Diet,</h1>
                 <h1>Just Eat Healthy</h1>
                 <h1>With Hungry Man?</h1>
-    
+
                 <p>
-                    Imagine you don't need a diet because we provide healthy and delicious food for you. We have thousands
-                    of restaurants, including local favorites that don't normally deliver. Discover new cuisines all around
+                    Imagine you don't need a diet because we provide healthy and delicious food for you. We have
+                    thousands
+                    of restaurants, including local favorites that don't normally deliver. Discover new cuisines all
+                    around
                     you!
                 </p>
                 <button>
@@ -42,11 +44,64 @@
         <div class="middle-content">
             <h2>About Me</h2>
             <p>
-                Hi! I'm Dev. Monir. I am an Entry-level web developer. Still, I am learning programming at programming Hero. I also have a Restaurant. The restaurant's name is Hungry Man?. Hungry Man? is one of the best food providers in Asia. The restaurant has branches in ten countries in Asia. The food menu here: pizza, burgers, desserts, fried chicken, cappuccino, rice dishes, snacks, drinks, smoked red chicken, etc. We also deliver food to your address in the shortest time possible. So stay connected to contact us at the address below.
+                Hi! I'm Dev. Monir. I am an Entry-level web developer. Still, I am learning programming at programming
+                Hero. I also have a Restaurant. The restaurant's name is Hungry Man?. Hungry Man? is one of the best
+                food providers in Asia. The restaurant has branches in ten countries in Asia. The food menu here: pizza,
+                burgers, desserts, fried chicken, cappuccino, rice dishes, snacks, drinks, smoked red chicken, etc. We
+                also deliver food to your address in the shortest time possible. So stay connected to contact us at the
+                address below.
             </p>
             <button id="btn-style">
                 <a href="#">Contact me</a>
             </button>
+        </div>
+    </section>
+    <section class="lower-3rd-sec">
+        <div>
+            <h2>My Recipies</h2>
+            <p>We have thousands of items, including local and international.<br> Discover new cuisines all around
+                you!.<br>We also deliver food to your address in the shortest time possible.<br> So, order now!</p>
+        </div>
+        <div class="recipies-sec">
+            <div class="recipies-content">
+                <img src="images/food/Project Cover.jpg" alt="">
+                <h3>Chocolate Cake</h3>
+                <p>
+                    You and a buddy ready to have your fill? The Buddy Rice Combo is a perfect solution with 2 Popcorn
+                    Rice Bowlz & 8pcs Hot Wings.
+                </p>
+            </div>
+            <div class="recipies-content">
+                <img src="images/food/Project Cover.png" alt="">
+                <h3>Vegetable Meal</h3>
+                <p>
+                    The classic rice and gravy with a side of hot wings. An explosion of flavors with every mouthful.
+                </p>
+            </div>
+            <div class="recipies-content">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Desserts</h3>
+                <p>
+                    Spicy, crunchy two chicken strips in a bigger and longer sesame bun, combined with fresh crunchy
+                    lettuce, sweet mayo with an amazing blend two different sauces.
+                </p>
+            </div>
+        </div>
+
+    </section>
+    <section class="lower-4th-sec">
+
+        <div class="follower-sec">
+            <h1>700k</h1>
+            <p>Youtube subscribers</p>
+        </div>
+        <div class="follower-sec">
+            <h1>2.4m</h1>
+            <p>Instagram Followers</p>
+        </div>
+        <div class="follower-sec">
+            <h1>100k</h1>
+            <p>Dribble Shot Likes</p>
         </div>
     </section>
 </body>
