lower-sec-added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/d71fdfef84.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,9 +18,9 @@
         <div id="header-sec-wrapper">
             <div id="header-style" class="header-content">
 
-                <h1><span>Skip</span> The Diet,</h1>
+                <h1>Skip The Diet,</h1>
                 <h1>Just Eat Healthy</h1>
-                <h1>With Hungry Man?</h1>
+                <h1>With <span>Hungry </span> Man?</h1>
 
                 <p>
                     Imagine you don't need a diet because we provide healthy and delicious food for you. We have
@@ -102,6 +103,45 @@
         <div class="follower-sec">
             <h1>100k</h1>
             <p>Dribble Shot Likes</p>
+        </div>
+    </section>
+    <section class="lower-sec">
+        <div class="about-sec">
+            <h1><span>Hungry</span> Man?</h1>
+            <i class="fas fa-map-marker-alt"></i>Level-6, Block A, Khulna, Bangladesh <br>
+            <i class="fas fa-envelope"></i>Official: monirujjamansana15@gmail.com <br>
+            <i class="fas fa-phone-alt"></i>Helpline: 017-90461666
+
+        </div>
+        <div class="about-sec">
+            <a target="_blank" href="#">
+                <h5>Restuarants Owner</h5>
+            </a>
+            <a href="#">
+                <h5>Become A Courier</h5>
+            </a>
+            <a href="#">
+                <h5>Refund policy</h5>
+            </a>
+            <a href="#">
+                <h5>Media & Community</h5>
+            </a>
+            <a href="#">
+                <h5>Terms and Conditions</h5>
+            </a>
+
+        </div>
+        <div class="about-sec">
+            <img src="images/payments-method/Payment-Brands.jpg" alt="">
+
+        </div>
+
+    </section>
+
+    <section class="footer-section">
+        <div class="footer-style">
+            <h1><span>Hungry?</span> Man</h1>
+            <p>Eat healthy to Live healthy. Live healthy to Live happy</p>
         </div>
     </section>
 </body>
