--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     you!
                 </p>
                 <button>
-                    <a href="#">Order Food</a>
+                    <a target="_blank" href="https://www.linkedin.com/company/programminghero/">Order Food</a>
                 </button>
             </div>
             <div class="header-content">
@@ -53,7 +53,7 @@
                 address below.
             </p>
             <button id="btn-style">
-                <a href="#">Contact me</a>
+                <a target="_blank" href="https://www.facebook.com/mdmonirujjaman15/">Contact me</a>
             </button>
         </div>
     </section>
@@ -90,6 +90,44 @@
         </div>
 
     </section>
+    <hr>
+    <section class="happy-clients">
+        <div>
+            <h2>Happy Clients</h2>
+            <p>when clients are happy then we are succeded!</p>
+        </div>
+        <div class="success-sec">
+            <div class="success-content">
+                <img src="images/female/happy-client-3.png"">
+                <h3>Maria Johnson</h3>
+                <p>
+                    It was a nice hotel, our friends had some issues with their room but ours was fine. The staff were nice, the facilities were okay. Nothing special but for the price it was okay. Good location, excellent staff and support, terrific value for money, yummy food and clean and complete facilities. I give it an A! they said sounds from nearby is noisy, but in my area it is not bothersome. I highly recommend Hotel Hungry Man?!!
+                </p>
+            </div>
+            <div class=" success-content">
+                <img src="images/female/happy-client-1.png" alt="">
+                <h3>Ema Smith</h3>
+                <p>
+                    I won't name the staff as it would be unfair, they all deserve credit! The staff at Hungry Man? go
+                    out of there way time and time again with the minimum of fuss to attend your every need. I'll be
+                    back and thoroughly recommend the hotel to anyone wanting location, value, service and
+                    professionalism throughout every level of your getaway! Well done Hungry Man? !
+                </p>
+            </div>
+            <div class="success-content">
+                <img src="images/female/happy-client-2.png" alt="">
+                <h3>Ammelia Starck</h3>
+                <p>
+                    It was a nice hotel, our friends had some issues with their room but ours was fine. The staff were
+                    nice, the facilities were okay. Nothing special but for the price it was okay.I give it an A! they
+                    said sounds from nearby is noisy, but in my area it is not bothersome. I highly recommend Hotel
+                    Hungry Man?!!
+                </p>
+            </div>
+        </div>
+
+    </section>
+
     <section class="lower-4th-sec">
 
         <div class="follower-sec">
@@ -105,6 +143,9 @@
             <p>Dribble Shot Likes</p>
         </div>
     </section>
+
+
+
     <section class="lower-sec">
         <div class="about-sec">
             <h1><span>Hungry</span> Man?</h1>
@@ -117,16 +158,16 @@
             <a target="_blank" href="#">
                 <h5>Restuarants Owner</h5>
             </a>
-            <a href="#">
+            <a target="_blank" href="#">
                 <h5>Become A Courier</h5>
             </a>
-            <a href="#">
+            <a target="_blank" href="#">
                 <h5>Refund policy</h5>
             </a>
-            <a href="#">
+            <a target="_blank" href="#">
                 <h5>Media & Community</h5>
             </a>
-            <a href="#">
+            <a target="_blank" href="#">
                 <h5>Terms and Conditions</h5>
             </a>
 
@@ -144,6 +185,9 @@
             <p>Eat healthy to Live healthy. Live healthy to Live happy</p>
         </div>
     </section>
+    <footer>
+        <p>© <span>Hungry</span> Man? 2021, All Rights Reserved.</p>
+    </footer>
 </body>
 
 </html>
